# signal-inspector

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  hocfile.yaml
.github/workflows/: create_release.yaml  test.yaml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: bench.rs  main.rs  model.rs
scripts/: bump_version.py  get_changelog.py  get_version.py  util.py
