[package]
name = "signal-inspector-frontend"
version = "0.0.0"
edition = "2021"

[dependencies]
dioxus-web = "0.3.0"
gloo = "0.8.0"
hound = "3.5.0"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["FileList", "File", "FileReader"] }
yew = { version = "0.20.0", features = ["csr"] }
