[package]
name = "signal-inspector-frontend"
version = "0.3.0"
edition = "2021"

[dependencies]
gloo = "0.8.0"
hound = "3.5.0"
im = "15.1.0"
js-sys = "0.3.60"
rustfft = "6.1.0"
wasm-bindgen = "0.2.83"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.60"
features = ["FileList", "Performance", "Window",  "PerformanceTiming", "File", "FileReader"]
